Move to Github Actions and SonarQube
* Remove errorprone
* upgrade mvn wrapper
* fix SignToolTest by fixing file order
* update readme
* upgrade some dependencies