@@ -7,7 +7,7 @@
     <parent>
         <groupId>at.favre.lib</groupId>
         <artifactId>common-parent</artifactId>
-        <version>15</version>
+        <version>18.1</version>
     </parent>
 
     <groupId>at.favre.tools</groupId>
@@ -18,25 +18,20 @@
         <commonConfig.jarSign.skip>false</commonConfig.jarSign.skip>
         <!-- TODO until we fix https://github.com/patrickfav/uber-apk-signer/issues/24 -->
         <commonConfig.jacoco.check.disable>true</commonConfig.jacoco.check.disable>
+        <!-- SonarQube Config -->
+        <sonar.organization>patrickfav</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.language>java</sonar.language>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>jcenter</id>
-            <name>jcenter</name>
-            <url>https://jcenter.bintray.com</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- this version is required, otherwise surefire stream error -->
+                <!-- this version is required, otherwise surefire errors -->
                 <version>3.0.0-M4</version>
             </plugin>
             <plugin>
@@ -50,17 +45,13 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.4.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -121,51 +112,6 @@
                 <groupId>net.nicoulaj.maven.plugins</groupId>
                 <artifactId>checksum-maven-plugin</artifactId>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>com.akathist.maven.plugins.launch4j</groupId>-->
-            <!--<artifactId>launch4j-maven-plugin</artifactId>-->
-            <!--<version>1.7.15</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>l4j-clui</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-            <!--<goal>launch4j</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<headerType>console</headerType>-->
-            <!--<outfile>target/usigner.exe</outfile>-->
-            <!--&lt;!&ndash;<icon>icon.ico</icon>&ndash;&gt;-->
-            <!--<jar>target/uber-apk-signer-${project.version}.jar</jar>-->
-            <!--<errTitle>uber-apk-signer</errTitle>-->
-            <!--<classPath>-->
-            <!--<mainClass>at.favre.tools.apksigner.SignTool</mainClass>-->
-            <!--<addDependencies>true</addDependencies>-->
-            <!--<preCp>anything</preCp>-->
-            <!--</classPath>-->
-            <!--<jre>-->
-            <!--<minVersion>1.8.0</minVersion>-->
-            <!--<opts>-->
-            <!--<opt>-Djava.endorsed.dirs=./endorsed</opt>-->
-            <!--</opts>-->
-            <!--</jre>-->
-            <!--<versionInfo>-->
-            <!--<fileVersion>0.0.0.1</fileVersion>-->
-            <!--<txtFileVersion>0.0.0.1</txtFileVersion>-->
-            <!--<fileDescription>A tool that enables advanced features through adb-->
-            <!--</fileDescription>-->
-            <!--<copyright>Patrick Favre-Bulle, 2016</copyright>-->
-            <!--<productVersion>${project.version}.0</productVersion>-->
-            <!--<txtProductVersion>${project.version}</txtProductVersion>-->
-            <!--<productName>Uber Apk Signer</productName>-->
-            <!--<internalName>uber-apk-signer</internalName>-->
-            <!--<originalFilename>usigner.exe</originalFilename>-->
-            <!--<language>EN</language>-->
-            <!--</versionInfo>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
         </plugins>
     </build>
 
@@ -174,7 +120,7 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <version>1.5.0</version>
         </dependency>
         <dependency>
             <groupId>com.android</groupId>
@@ -186,7 +132,6 @@
         <dependency>
             <groupId>at.favre.lib</groupId>
             <artifactId>bytes</artifactId>
-            <version>1.3.0</version>
         </dependency>
         <!-- test -->
         <dependency>
@@ -197,15 +142,14 @@
         <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
-            <version>1.10.11</version>
+            <version>1.10.13</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <scm>
-        <connection>https://github.com/patrickfav/uber-apk-signer.git</connection>
-        <developerConnection>https://github.com/patrickfav/uber-apk-signer.git</developerConnection>
-        <tag>HEAD</tag>
+        <connection>scm:git:https://github.com/patrickfav/uber-apk-signer.git</connection>
+        <developerConnection>scm:git:https://github.com/patrickfav/uber-apk-signer.git</developerConnection>
         <url>https://github.com/patrickfav/uber-apk-signer</url>
     </scm>
 
@@ -215,7 +159,7 @@
     </issueManagement>
 
     <ciManagement>
-        <system>Travis</system>
-        <url>https://travis-ci.com/patrickfav/uber-apk-signer</url>
+        <system>Github Actions</system>
+        <url>https://github.com/patrickfav/uber-apk-signer/actions</url>
     </ciManagement>
 </project>
